--- a/Sample/app/build.gradle
+++ b/Sample/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "sample.rxobservablelist.mayurkaul.github.com.samplerxobservablelist"
+        applicationId "com.github.mayurkaul.rxobservablelist.sample"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -23,7 +23,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-android:2.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -31,4 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation project(':rxobservablelist')
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.github.rasoulmiri:buttonloading:v1.0.8'
 }
