--- a/Sample/app/src/main/AndroidManifest.xml
+++ b/Sample/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sample.rxobservablelist.mayurkaul.github.com.samplerxobservablelist">
+    package="com.github.mayurkaul.rxobservablelist.sample">
 
     <application
         android:allowBackup="true"
@@ -9,9 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <service
+            android:name=".data.BlockChainProviderService"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:name=".RootActivity"
+            android:label="@string/title_activity_root"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
